--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .input-box {
+        @apply border-[2px] border-slate-500 rounded p-2 w-full
+    }
+
+    .input {
+        @apply outline-none bg-transparent w-full
+    }
+
+    .submit-btn {
+        @apply w-1/2 mx-auto bg-blue-600 rounded p-2 mt-4 text-white text-lg hover:bg-blue-700
+    }
+}
